add news and articles

--- a/news.html
+++ b/news.html
@@ -169,7 +169,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8 col-md-8 col-lg-8 blog">
-                        <a href="https://lumico.com.au/article/9586-the-freedom-of-solar-energy"
+                        <a href="/article/9586-the-freedom-of-solar-energy"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
@@ -185,7 +185,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="https://lumico.com.au/article/9541-your-process-of-getting-started-with-lumico"
+                        <a href="/article/9541-your-process-of-getting-started-with-lumico"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
@@ -201,7 +201,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="https://lumico.com.au/article/9511-how-to-control-your-energy-costs"
+                        <a href="/article/9511-how-to-control-your-energy-costs"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
@@ -217,7 +217,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="https://lumico.com.au/article/9493-make-the-dream-of-free-electricity-come-true"
+                        <a href="/article/9493-make-the-dream-of-free-electricity-come-true"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
@@ -233,7 +233,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="https://lumico.com.au/article/9444-how-our-choice-in-quality-solar-panels-will-affect-your-solar-system"
+                        <a href="/article/9444-how-our-choice-in-quality-solar-panels-will-affect-your-solar-system"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
@@ -250,7 +250,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="https://lumico.com.au/article/9399-are-you-looking-for-a-solar-provider-that-offers-on-going-customer-service-and-support"
+                        <a href="/article/9399-are-you-looking-for-a-solar-provider-that-offers-on-going-customer-service-and-support"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
@@ -270,13 +270,13 @@
                         <div style="text-align: center">
                             Previous. 1
                             <a href="/newsp=2">2</a>
-                            <a href="https://lumico.com.au/news?p=3">3</a>
-                            <a href="https://lumico.com.au/news?p=4">4</a>
-                            <a href="https://lumico.com.au/news?p=5">5</a>
-                            <a href="https://lumico.com.au/news?p=6">6</a>
-                            <a href="https://lumico.com.au/news?p=7">7</a>
-                            <a href="https://lumico.com.au/news?p=8">8</a>
-                            <a href="https://lumico.com.au/news?p=2">Next</a>
+                            <a href="/newsp=3">3</a>
+                            <a href="/newsp=4">4</a>
+                            <a href="/newsp=5">5</a>
+                            <a href="/newsp=6">6</a>
+                            <a href="/newsp=7">7</a>
+                            <a href="/newsp=8">8</a>
+                            <a href="/newsp=2">Next</a>
                         </div>
                         <script>
                             var css = document.createElement("link");
