--- a/newsp=4.html
+++ b/newsp=4.html
@@ -169,115 +169,109 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8 col-md-8 col-lg-8 blog">
-                        <a href="/article/9361-when-you-invest-in-lumico-solar-electrical-you-invest-in-quality"
-                            style="text-decoration: none; color: inherit">
+                        <a href="/article/8749-our-smart-solar-products" style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/aed99d990f35fc117cfe4253cb8b3bcf/33ec260730da1838-e0/s540x810/ee343127e4afc109d3e750b2f8208f56a204216d.jpg"
+                                    <img src="https://64.media.tumblr.com/1b8b0bb794cb45536eb3801016a98080/d5d8d56f6a563918-4f/s540x810/4d7089c83edfb8c1c729e96ef0a2a9e582aec502.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>22 Aug, 2021</p>
-                                    <h4 style="margin-top: 20px">When You Invest In Lumico Solar &amp; Electrical You
-                                        Invest In Quality</h4>
-                                    <p style="margin-top: 20px">It&rsquo;s often true what they, you get what you for.
-                                        And when we&rsquo;re talking solar, this means quality panels, premium inverters
-                                        and first-class backup batteries. Our expert installers are inv ...</p>
+                                    <p>23 May, 2021</p>
+                                    <h4 style="margin-top: 20px">Our Smart Solar Products</h4>
+                                    <p style="margin-top: 20px">Our products give you everything you need to know about
+                                        your solar system performance, all in one place. We have systems that give you
+                                        full control over your production and consumption. As a Clean ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9332-what-it-means-to-invest-in-the-long-term-value-of-your-solar-system"
+                        <a href="/article/8701-we-create-opportunities-to-reduce-your-energy-spending"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/db31e8e3a231f728825c569d01954f07/2c3614ff3e2acb24-ea/s540x810/ce8a4f16c394feb06ccb167cfc2277306c48e5d9.jpg"
+                                    <img src="https://64.media.tumblr.com/cc8cb9c8e11f3c3ac9633de7b0637dcc/22339dc5a7be7500-55/s540x810/9e737c04e611f00a8482df72c7689321c4fdfceb.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>16 Aug, 2021</p>
-                                    <h4 style="margin-top: 20px">What It Means To Invest In The Long Term Value Of Your
-                                        Solar System</h4>
-                                    <p style="margin-top: 20px">Are you interested in the long term value of your solar
-                                        system? You Should be! We look at the long-term gains you can achieve with the
-                                        right system for your home or business and offer you a premium q ...</p>
+                                    <p>16 May, 2021</p>
+                                    <h4 style="margin-top: 20px">We Create Opportunities To Reduce your Energy Spending
+                                    </h4>
+                                    <p style="margin-top: 20px"></p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9226-our-commitment-to-service-and-satisfaction"
-                            style="text-decoration: none; color: inherit">
+                        <a href="/article/8647-how-we-help-our-clients" style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/c8285de3a8781103fd1e0334a30017b7/8ec027b2a5239d67-82/s540x810/4ac0f07ee04dad7401dfc52b960543c87defade8.png"
+                                    <img src="https://64.media.tumblr.com/85a19fa66721fc579421977a6ccdde68/8377b0e4f0bc7912-00/s540x810/1cc10130a4fd6e7176ce0dbe47ea293d5adbee99.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>1 Aug, 2021</p>
-                                    <h4 style="margin-top: 20px">Our Commitment to Service and Satisfaction</h4>
-                                    <p style="margin-top: 20px">We don&rsquo;t stop the work until you&rsquo;re
-                                        completely satisfied with the outcome! As a CEC Accredited solar provider, we
-                                        are proud to offer a range of quality products. All of the solar panels ...</p>
+                                    <p>9 May, 2021</p>
+                                    <h4 style="margin-top: 20px">How We Help Our Clients</h4>
+                                    <p style="margin-top: 20px">Have an electrical fault that needs to be attended to?
+                                        Because we are the best fit for you, Our professional expertise extends well
+                                        beyond just solar. We offer a comprehensive electrical and mainte ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9184-here-s-how-you-can-cut-your-carbon-footprint"
+                        <a href="/article/8597-our-wide-range-of-services"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/f4585eeb491c144065305d2c487a1c90/0c0d389cb6e4e3db-58/s540x810/73b3d66f71c862b5a3d359fbd842a9a24b6de60c.png"
+                                    <img src="https://64.media.tumblr.com/b93303547b8990e9130b27a1dee1f916/afa4e29057918d66-5d/s540x810/4102020f093183cf7151be39b93134fa02609ca5.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>25 Jul, 2021</p>
-                                    <h4 style="margin-top: 20px">Here&#039;s How You Can Cut Your Carbon Footprint</h4>
-                                    <p style="margin-top: 20px">Light up your home and cut your carbon footprint with an
-                                        easy-to-install solar panel system. We specialize in finding you the solar
-                                        panels that will work best for your home or commercial property. ...
-                                    </p>
+                                    <p>2 May, 2021</p>
+                                    <h4 style="margin-top: 20px">Our Wide Range of Services</h4>
+                                    <p style="margin-top: 20px">We love our solar systems, but that&rsquo;s not the only
+                                        service we love to offer our clients! Our work extends beyond solar. As
+                                        electricians by trade, we are able to provide a wide range of services ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9144-tailored-solutions-for-our-clients"
+                        <a href="/article/8544-how-much-should-you-invest-in-solar"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/cc4906556b3befffc369461351f8bf79/cd20f0c982f2d734-f3/s540x810/8a65e94d332d0182b372a676808bd5ece349e35d.png"
+                                    <img src="https://64.media.tumblr.com/349f0ba2bbbe7b8eb9da9f6ac039a6c8/fa08a5c80f65ac8d-df/s540x810/45445584a9696dfe2b90b85e8693c44cedb5f125.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>18 Jul, 2021</p>
-                                    <h4 style="margin-top: 20px">Tailored Solutions For Our Clients</h4>
-                                    <p style="margin-top: 20px">When you choose to work with us, you can expect a range
-                                        of solar solutions, subject to your individual requirements. Our core electrical
-                                        service includes quality installations, carried out by reliab ...</p>
+                                    <p>25 Apr, 2021</p>
+                                    <h4 style="margin-top: 20px">How Much Should you Invest in Solar</h4>
+                                    <p style="margin-top: 20px">Are you looking for the right solar system for your home
+                                        or business? Then read this before diving head-first! Convenience is becoming a
+                                        real problem in the solar industry, with many solar provide ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9113-our-wide-range-of-energy-solutions"
+                        <a href="/article/8478-what-kind-of-panels-you-should-invest-in"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/433fe314d3f9b60b3cdb53263d1d78a4/21b819f08ce0ffc3-04/s540x810/5fb79d8127509de8addd8f7b48a35b05fceb5887.png"
+                                    <img src="https://64.media.tumblr.com/bf1e196548f54ca61dbfca46ef937d3a/7949628772c715ca-69/s540x810/7eaa666ffe12c81df03da287d09d19b235615b48.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>11 Jul, 2021</p>
-                                    <h4 style="margin-top: 20px">Our Wide Range of Energy Solutions</h4>
-                                    <p style="margin-top: 20px">Whether you are considering battery storage, solar
-                                        panels or just exploring your energy options, we have a solution for you. Our
-                                        range of products and services include solar panel installation, repl ...</p>
+                                    <p>18 Apr, 2021</p>
+                                    <h4 style="margin-top: 20px">What Kind of Panels you Should Invest In</h4>
+                                    <p style="margin-top: 20px">Need quality panels for your solar system? With so many
+                                        manufacturers available in this booming market, making the right choice counts.
+                                        But be warned! There are endless companies out there offerin ...</p>
                                 </div>
                             </div>
                         </a>
                         <div style="text-align: center">
-                            <a href="/news">Previous.</a>
-                            <a href="/news">1</a> 2
-                            <a href="/newsp=3">3</a>
-                            <a href="/newsp=4">4</a>
+                            <a href="/newsp=3">Previous.</a>
+                            <a href="/news">1</a>
+                            <a href="/newsp=2">2</a>
+                            <a href="/newsp=3">3</a> 4
                             <a href="/newsp=5">5</a>
                             <a href="/newsp=6">6</a>
                             <a href="/newsp=7">7</a>
                             <a href="/newsp=8">8</a>
-                            <a href="/newsp=3">Next</a>
+                            <a href="/newsp=5">Next</a>
                         </div>
                         <script>
                             var css = document.createElement("link");
@@ -366,9 +360,9 @@
                                         </div>
                                     </div>
                                     <div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
-                                        <p><a href="/cdn-cgi/l/email-protection#0b7864676a794b677e6662686425686466256a7e"
+                                        <p><a href="/cdn-cgi/l/email-protection#b2c1ddded3c0f2dec7dfdbd1dd9cd1dddf9cd3c7"
                                                 class="footer-text-info" title="Email"><span class="__cf_email__"
-                                                    data-cfemail="10637f7c7162507c657d79737f3e737f7d3e7165">[email&#160;protected]</span></a>
+                                                    data-cfemail="1665797a7764567a637b7f75793875797b387763">[email&#160;protected]</span></a>
                                         </p>
                                     </div>
                                 </div>
