--- a/newsp=6.html
+++ b/newsp=6.html
@@ -169,115 +169,115 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8 col-md-8 col-lg-8 blog">
-                        <a href="/article/9361-when-you-invest-in-lumico-solar-electrical-you-invest-in-quality"
+                        <a href="/article/8111-trust-your-investment-with-reputable-installers"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/aed99d990f35fc117cfe4253cb8b3bcf/33ec260730da1838-e0/s540x810/ee343127e4afc109d3e750b2f8208f56a204216d.jpg"
+                                    <img src="https://64.media.tumblr.com/b87516d6b8385e1551a2712e8541e934/71e43970f75043b3-e6/s540x810/86edd531911b62a35b12193cffee327d87f1340b.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>22 Aug, 2021</p>
-                                    <h4 style="margin-top: 20px">When You Invest In Lumico Solar &amp; Electrical You
-                                        Invest In Quality</h4>
-                                    <p style="margin-top: 20px">It&rsquo;s often true what they, you get what you for.
-                                        And when we&rsquo;re talking solar, this means quality panels, premium inverters
-                                        and first-class backup batteries. Our expert installers are inv ...</p>
+                                    <p>28 Feb, 2021</p>
+                                    <h4 style="margin-top: 20px">Trust your Investment with Reputable Installers</h4>
+                                    <p style="margin-top: 20px">Are you looking for reputable solar installers? With
+                                        solar in significant demand, finding an experienced solar company can be like
+                                        finding a needle in a haystack! It is essential to try as much as p ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9332-what-it-means-to-invest-in-the-long-term-value-of-your-solar-system"
+                        <a href="/article/8050-looking-to-reduce-costs-on-essential-expenses-here-s-how"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/db31e8e3a231f728825c569d01954f07/2c3614ff3e2acb24-ea/s540x810/ce8a4f16c394feb06ccb167cfc2277306c48e5d9.jpg"
+                                    <img src="https://64.media.tumblr.com/fd1c8feadf0368da092fa0ed4c451c34/518bc492f86aa85e-38/s540x810/2eaae611f62f1f908721d46d07395fc5ef61a2ea.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>16 Aug, 2021</p>
-                                    <h4 style="margin-top: 20px">What It Means To Invest In The Long Term Value Of Your
-                                        Solar System</h4>
-                                    <p style="margin-top: 20px">Are you interested in the long term value of your solar
-                                        system? You Should be! We look at the long-term gains you can achieve with the
-                                        right system for your home or business and offer you a premium q ...</p>
+                                    <p>21 Feb, 2021</p>
+                                    <h4 style="margin-top: 20px">Looking to Reduce Costs on Essential Expenses?
+                                        Here&#039;s How</h4>
+                                    <p style="margin-top: 20px">Are you looking to reduce costs on essential (but
+                                        expensive!) expenses like energy? When it comes to energy, it&rsquo;s hard to
+                                        find tangible long-term solutions that meet your needs. Luckily, sus ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9226-our-commitment-to-service-and-satisfaction"
+                        <a href="/article/7996-the-sun-is-a-reliable-source-of-energy-here-s-why"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/c8285de3a8781103fd1e0334a30017b7/8ec027b2a5239d67-82/s540x810/4ac0f07ee04dad7401dfc52b960543c87defade8.png"
+                                    <img src="https://64.media.tumblr.com/64265fd42c1644ff8fb05d5efcc4053f/df7516fe09aa0998-41/s540x810/4138ff95cce611cf4e242f92d55bed284b9ea5a4.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>1 Aug, 2021</p>
-                                    <h4 style="margin-top: 20px">Our Commitment to Service and Satisfaction</h4>
-                                    <p style="margin-top: 20px">We don&rsquo;t stop the work until you&rsquo;re
-                                        completely satisfied with the outcome! As a CEC Accredited solar provider, we
-                                        are proud to offer a range of quality products. All of the solar panels ...</p>
+                                    <p>14 Feb, 2021</p>
+                                    <h4 style="margin-top: 20px">The Sun is a Reliable Source of Energy. Here&#039;s Why
+                                    </h4>
+                                    <p style="margin-top: 20px">Are you looking for a reliable source of energy? Look no
+                                        further than the sun! With a complete and tailored solar system as part of your
+                                        home, you have access to unlimited sustainable and renewable e ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9184-here-s-how-you-can-cut-your-carbon-footprint"
+                        <a href="/article/7937-wishing-to-install-solar-for-your-home-or-business-here-s-what-you-need-to-know"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/f4585eeb491c144065305d2c487a1c90/0c0d389cb6e4e3db-58/s540x810/73b3d66f71c862b5a3d359fbd842a9a24b6de60c.png"
+                                    <img src="https://64.media.tumblr.com/bf6828265e3492f00abcb4e61a3caa9e/7b7e54bcf5b32225-d3/s540x810/89a4576307ac6b387632d5d31a72bf1e30ad7a81.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>25 Jul, 2021</p>
-                                    <h4 style="margin-top: 20px">Here&#039;s How You Can Cut Your Carbon Footprint</h4>
-                                    <p style="margin-top: 20px">Light up your home and cut your carbon footprint with an
-                                        easy-to-install solar panel system. We specialize in finding you the solar
-                                        panels that will work best for your home or commercial property. ...
-                                    </p>
+                                    <p>7 Feb, 2021</p>
+                                    <h4 style="margin-top: 20px">Wishing to Install Solar for your Home or Business?
+                                        Here&#039;s what you Need to Know</h4>
+                                    <p style="margin-top: 20px">Do you have a business and wish to install a solar
+                                        system? We conduct feasibility assessments and recommend the best solar solution
+                                        suitable for your business while we carefully consider your indivi ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9144-tailored-solutions-for-our-clients"
+                        <a href="/article/7888-why-make-the-switch-we-ve-got-plenty-of-reasons-for-why"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/cc4906556b3befffc369461351f8bf79/cd20f0c982f2d734-f3/s540x810/8a65e94d332d0182b372a676808bd5ece349e35d.png"
+                                    <img src="https://64.media.tumblr.com/b763c743a83d79150eecdec1f5e9abdc/c2a8c8df7b76119e-51/s540x810/81b5895c32b6c014e94041d8cb72abe973cf2a13.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>18 Jul, 2021</p>
-                                    <h4 style="margin-top: 20px">Tailored Solutions For Our Clients</h4>
-                                    <p style="margin-top: 20px">When you choose to work with us, you can expect a range
-                                        of solar solutions, subject to your individual requirements. Our core electrical
-                                        service includes quality installations, carried out by reliab ...</p>
+                                    <p>31 Jan, 2021</p>
+                                    <h4 style="margin-top: 20px">Why Make the Switch? We&#039;ve Got Plenty of Reasons
+                                        for Why</h4>
+                                    <p style="margin-top: 20px">Are you wondering if solar is a viable option for your
+                                        kind of business (Hint: It ALWAYS will be!)? No matter what industry you’re in,
+                                        solar presents an opportunity for companies of all sizes to r ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9113-our-wide-range-of-energy-solutions"
-                            style="text-decoration: none; color: inherit">
+                        <a href="/article/7821-our-exclusive-offer" style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/433fe314d3f9b60b3cdb53263d1d78a4/21b819f08ce0ffc3-04/s540x810/5fb79d8127509de8addd8f7b48a35b05fceb5887.png"
+                                    <img src="https://64.media.tumblr.com/2ea640a7515fa40b519fb0c029639603/f50177037565c420-48/s540x810/1f0e496445edcac55062e3d316f90620029d1df6.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>11 Jul, 2021</p>
-                                    <h4 style="margin-top: 20px">Our Wide Range of Energy Solutions</h4>
-                                    <p style="margin-top: 20px">Whether you are considering battery storage, solar
-                                        panels or just exploring your energy options, we have a solution for you. Our
-                                        range of products and services include solar panel installation, repl ...</p>
+                                    <p>24 Jan, 2021</p>
+                                    <h4 style="margin-top: 20px">Our Exclusive Offer</h4>
+                                    <p style="margin-top: 20px">Are you looking to make the switch into solar energy?
+                                        Then you might want to read this. Switch with us and get a $200 credit for
+                                        electrical services to make sure your electrical system is up to scra ...</p>
                                 </div>
                             </div>
                         </a>
                         <div style="text-align: center">
-                            <a href="/news">Previous.</a>
-                            <a href="/news">1</a> 2
+                            <a href="/newsp=5">Previous.</a>
+                            <a href="/news">1</a>
+                            <a href="/newsp=2">2</a>
                             <a href="/newsp=3">3</a>
                             <a href="/newsp=4">4</a>
-                            <a href="/newsp=5">5</a>
-                            <a href="/newsp=6">6</a>
+                            <a href="/newsp=5">5</a> 6
                             <a href="/newsp=7">7</a>
                             <a href="/newsp=8">8</a>
-                            <a href="/newsp=3">Next</a>
+                            <a href="/newsp=7">Next</a>
                         </div>
                         <script>
                             var css = document.createElement("link");
@@ -331,7 +331,6 @@
         </section>
 
         <footer class="footer">
-
             <div class="footer-top mb-20">
                 <div class="container">
                     <div class="row">
@@ -366,9 +365,9 @@
                                         </div>
                                     </div>
                                     <div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
-                                        <p><a href="/cdn-cgi/l/email-protection#0b7864676a794b677e6662686425686466256a7e"
+                                        <p><a href="/cdn-cgi/l/email-protection#0f7c60636e7d4f637a62666c60216c6062216e7a"
                                                 class="footer-text-info" title="Email"><span class="__cf_email__"
-                                                    data-cfemail="10637f7c7162507c657d79737f3e737f7d3e7165">[email&#160;protected]</span></a>
+                                                    data-cfemail="2c5f43404d5e6c405941454f43024f4341024d59">[email&#160;protected]</span></a>
                                         </p>
                                     </div>
                                 </div>
