--- a/newsp=7.html
+++ b/newsp=7.html
@@ -169,115 +169,110 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8 col-md-8 col-lg-8 blog">
-                        <a href="/article/9361-when-you-invest-in-lumico-solar-electrical-you-invest-in-quality"
-                            style="text-decoration: none; color: inherit">
+                        <a href="/article/7775-our-main-specialisations" style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/aed99d990f35fc117cfe4253cb8b3bcf/33ec260730da1838-e0/s540x810/ee343127e4afc109d3e750b2f8208f56a204216d.jpg"
+                                    <img src="https://64.media.tumblr.com/af13abff303110bc0f339db2f2cdc0a9/1db96bda74a4852d-60/s540x810/bae0e7bda97ec9c18a65f28571ede39d82206804.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>22 Aug, 2021</p>
-                                    <h4 style="margin-top: 20px">When You Invest In Lumico Solar &amp; Electrical You
-                                        Invest In Quality</h4>
-                                    <p style="margin-top: 20px">It&rsquo;s often true what they, you get what you for.
-                                        And when we&rsquo;re talking solar, this means quality panels, premium inverters
-                                        and first-class backup batteries. Our expert installers are inv ...</p>
+                                    <p>17 Jan, 2021</p>
+                                    <h4 style="margin-top: 20px">Our Main Specialisations</h4>
+                                    <p style="margin-top: 20px">We get that committing solar can be an overwhelming
+                                        process&hellip; But you won&rsquo;t be alone in getting it done! We specialise
+                                        in all types and sizes of commercial solar systems, which are speci ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9332-what-it-means-to-invest-in-the-long-term-value-of-your-solar-system"
-                            style="text-decoration: none; color: inherit">
+                        <a href="/article/7725-the-benefits-of-batteries" style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/db31e8e3a231f728825c569d01954f07/2c3614ff3e2acb24-ea/s540x810/ce8a4f16c394feb06ccb167cfc2277306c48e5d9.jpg"
+                                    <img src="https://64.media.tumblr.com/dd6751f02b0a34aadc617644daf4563d/89a3975de05f3b68-4c/s540x810/cfde0ff3ee63b42b6f902d94540807ef42271dfe.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>16 Aug, 2021</p>
-                                    <h4 style="margin-top: 20px">What It Means To Invest In The Long Term Value Of Your
-                                        Solar System</h4>
-                                    <p style="margin-top: 20px">Are you interested in the long term value of your solar
-                                        system? You Should be! We look at the long-term gains you can achieve with the
-                                        right system for your home or business and offer you a premium q ...</p>
+                                    <p>10 Jan, 2021</p>
+                                    <h4 style="margin-top: 20px">The Benefits of Batteries</h4>
+                                    <p style="margin-top: 20px">Being connected to the primary grid ISN&rsquo;T enough.
+                                        As a business, you NEED to rely on a source of power that won&rsquo;t let you
+                                        down during inclement weather or blackouts. Not only is solar po ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9226-our-commitment-to-service-and-satisfaction"
+                        <a href="/article/7678-calling-all-home-and-business-owners-in-adelaide"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/c8285de3a8781103fd1e0334a30017b7/8ec027b2a5239d67-82/s540x810/4ac0f07ee04dad7401dfc52b960543c87defade8.png"
+                                    <img src="https://64.media.tumblr.com/c115e28a1881b066a0775b9d5f56eaf7/0a6ef61a01de2fee-a7/s540x810/b3952c0a7aa6f0bf9c59fff28e0471e00e5823e7.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>1 Aug, 2021</p>
-                                    <h4 style="margin-top: 20px">Our Commitment to Service and Satisfaction</h4>
-                                    <p style="margin-top: 20px">We don&rsquo;t stop the work until you&rsquo;re
-                                        completely satisfied with the outcome! As a CEC Accredited solar provider, we
-                                        are proud to offer a range of quality products. All of the solar panels ...</p>
+                                    <p>3 Jan, 2021</p>
+                                    <h4 style="margin-top: 20px">Calling All Home and Business Owners in Adelaide!</h4>
+                                    <p style="margin-top: 20px">Are you an Adelaide-based business or homeowner looking
+                                        to upgrade the way you consume energy? Then we&rsquo;ve got a special promotion
+                                        for you! Every new solar customer of ours gets a $200 credit f ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9184-here-s-how-you-can-cut-your-carbon-footprint"
+                        <a href="/article/7624-curb-your-operating-expenses-by-going-solar"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/f4585eeb491c144065305d2c487a1c90/0c0d389cb6e4e3db-58/s540x810/73b3d66f71c862b5a3d359fbd842a9a24b6de60c.png"
+                                    <img src="https://64.media.tumblr.com/a07c66433aad8d85bfebd88e36593704/5f06d1d1169cc1e0-f5/s540x810/cddc48b50494586b7a882f5738543b7b8740f050.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>25 Jul, 2021</p>
-                                    <h4 style="margin-top: 20px">Here&#039;s How You Can Cut Your Carbon Footprint</h4>
-                                    <p style="margin-top: 20px">Light up your home and cut your carbon footprint with an
-                                        easy-to-install solar panel system. We specialize in finding you the solar
-                                        panels that will work best for your home or commercial property. ...
-                                    </p>
+                                    <p>27 Dec, 2020</p>
+                                    <h4 style="margin-top: 20px">Curb your Operating Expenses by Going Solar</h4>
+                                    <p style="margin-top: 20px">Owning a business can be a costly affair – don&rsquo;t
+                                        let your energy bills be one of the expenses that stop you from operating at
+                                        200% capacity! Solar is the most effective method of controlling ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9144-tailored-solutions-for-our-clients"
+                        <a href="/article/7569-why-upgrade-your-home-to-solar"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/cc4906556b3befffc369461351f8bf79/cd20f0c982f2d734-f3/s540x810/8a65e94d332d0182b372a676808bd5ece349e35d.png"
+                                    <img src="https://64.media.tumblr.com/49bba53578445d0be7e4f7de9ae7c54b/b183eb81b5e30738-e7/s540x810/ef9bb4a1508a84e191c0c6d7c98b5f3bc65e3c15.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>18 Jul, 2021</p>
-                                    <h4 style="margin-top: 20px">Tailored Solutions For Our Clients</h4>
-                                    <p style="margin-top: 20px">When you choose to work with us, you can expect a range
-                                        of solar solutions, subject to your individual requirements. Our core electrical
-                                        service includes quality installations, carried out by reliab ...</p>
+                                    <p>20 Dec, 2020</p>
+                                    <h4 style="margin-top: 20px">Why &quot;Upgrade&quot; Your Home to Solar</h4>
+                                    <p style="margin-top: 20px">Making the switch to solar is a lot like making upgrades
+                                        to your home&hellip;here&rsquo;s why. A residential solar system can provide you
+                                        and your family with peace of mind by generating free and cle ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9113-our-wide-range-of-energy-solutions"
+                        <a href="/article/7509-the-best-installers-right-at-your-door"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/433fe314d3f9b60b3cdb53263d1d78a4/21b819f08ce0ffc3-04/s540x810/5fb79d8127509de8addd8f7b48a35b05fceb5887.png"
+                                    <img src="https://64.media.tumblr.com/5ed44d76cc8019c9fcc8382aaca07b03/5baee6fd7eca2188-24/s540x810/45a494b72e0ec7038ab500eff8bbf613196e0d37.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>11 Jul, 2021</p>
-                                    <h4 style="margin-top: 20px">Our Wide Range of Energy Solutions</h4>
-                                    <p style="margin-top: 20px">Whether you are considering battery storage, solar
-                                        panels or just exploring your energy options, we have a solution for you. Our
-                                        range of products and services include solar panel installation, repl ...</p>
+                                    <p>13 Dec, 2020</p>
+                                    <h4 style="margin-top: 20px">The Best Installers Right at your Door</h4>
+                                    <p style="margin-top: 20px">Are you looking for the best professional installers? We
+                                        are experts in designing and installing residential solar systems. When you
+                                        decide to work with our team, you’ll be choosing a long-term ...</p>
                                 </div>
                             </div>
                         </a>
                         <div style="text-align: center">
-                            <a href="/news">Previous.</a>
-                            <a href="/news">1</a> 2
+                            <a href="/newsp=6">Previous.</a>
+                            <a href="/news">1</a>
+                            <a href="/newsp=2">2</a>
                             <a href="/newsp=3">3</a>
                             <a href="/newsp=4">4</a>
                             <a href="/newsp=5">5</a>
-                            <a href="/newsp=6">6</a>
-                            <a href="/newsp=7">7</a>
+                            <a href="/newsp=6">6</a> 7
                             <a href="/newsp=8">8</a>
-                            <a href="/newsp=3">Next</a>
+                            <a href="/newsp=8">Next</a>
                         </div>
                         <script>
                             var css = document.createElement("link");
@@ -331,7 +326,6 @@
         </section>
 
         <footer class="footer">
-
             <div class="footer-top mb-20">
                 <div class="container">
                     <div class="row">
@@ -366,9 +360,9 @@
                                         </div>
                                     </div>
                                     <div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
-                                        <p><a href="/cdn-cgi/l/email-protection#0b7864676a794b677e6662686425686466256a7e"
+                                        <p><a href="/cdn-cgi/l/email-protection#2c5f43404d5e6c405941454f43024f4341024d59"
                                                 class="footer-text-info" title="Email"><span class="__cf_email__"
-                                                    data-cfemail="10637f7c7162507c657d79737f3e737f7d3e7165">[email&#160;protected]</span></a>
+                                                    data-cfemail="bbc8d4d7dac9fbd7ced6d2d8d495d8d4d695dace">[email&#160;protected]</span></a>
                                         </p>
                                     </div>
                                 </div>
