--- a/newsp=8.html
+++ b/newsp=8.html
@@ -169,115 +169,108 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8 col-md-8 col-lg-8 blog">
-                        <a href="/article/9361-when-you-invest-in-lumico-solar-electrical-you-invest-in-quality"
+                        <a href="/article/7450-learn-more-about-our-special-offer"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/aed99d990f35fc117cfe4253cb8b3bcf/33ec260730da1838-e0/s540x810/ee343127e4afc109d3e750b2f8208f56a204216d.jpg"
+                                    <img src="https://64.media.tumblr.com/a0b1ee6d5bc58776f63a752f5d01ac8b/7910e422768fce6e-d7/s540x810/456b4e1717a45df931fce86d5d777569010652d9.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>22 Aug, 2021</p>
-                                    <h4 style="margin-top: 20px">When You Invest In Lumico Solar &amp; Electrical You
-                                        Invest In Quality</h4>
-                                    <p style="margin-top: 20px">It&rsquo;s often true what they, you get what you for.
-                                        And when we&rsquo;re talking solar, this means quality panels, premium inverters
-                                        and first-class backup batteries. Our expert installers are inv ...</p>
+                                    <p>6 Dec, 2020</p>
+                                    <h4 style="margin-top: 20px">Learn More About Our Special Offer</h4>
+                                    <p style="margin-top: 20px">Christmas is nearby, and our special offer is
+                                        on&hellip;just in time for the Holidays! We’re offering $200 credit to new solar
+                                        customers, giving you peace of mind should you need any electrical upg ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9332-what-it-means-to-invest-in-the-long-term-value-of-your-solar-system"
-                            style="text-decoration: none; color: inherit">
+                        <a href="/article/7384-why-switch-to-solar" style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/db31e8e3a231f728825c569d01954f07/2c3614ff3e2acb24-ea/s540x810/ce8a4f16c394feb06ccb167cfc2277306c48e5d9.jpg"
+                                    <img src="https://64.media.tumblr.com/9215928d0b72c85c8537e10f3d6efc9d/7d004c3420df5b71-61/s540x810/61f9275ffcd6869f53d089dccef890d2671d9195.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>16 Aug, 2021</p>
-                                    <h4 style="margin-top: 20px">What It Means To Invest In The Long Term Value Of Your
-                                        Solar System</h4>
-                                    <p style="margin-top: 20px">Are you interested in the long term value of your solar
-                                        system? You Should be! We look at the long-term gains you can achieve with the
-                                        right system for your home or business and offer you a premium q ...</p>
+                                    <p>29 Nov, 2020</p>
+                                    <h4 style="margin-top: 20px">Why Switch to Solar?</h4>
+                                    <p style="margin-top: 20px">Save more on your energy bills by upgrading and using
+                                        solar instead! By using this source of energy generated through solar panels,
+                                        you can have more freedom and a higher amount of control over your ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9226-our-commitment-to-service-and-satisfaction"
+                        <a href="/article/7334-if-you-re-a-commercial-business-we-d-love-to-work-with-you"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/c8285de3a8781103fd1e0334a30017b7/8ec027b2a5239d67-82/s540x810/4ac0f07ee04dad7401dfc52b960543c87defade8.png"
+                                    <img src="https://64.media.tumblr.com/aa32e4545bced9fea990bd0b266b4175/66345df7471a83b4-b3/s540x810/35db45d8e8352bc8a914f05799c675a8e4059bad.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>1 Aug, 2021</p>
-                                    <h4 style="margin-top: 20px">Our Commitment to Service and Satisfaction</h4>
-                                    <p style="margin-top: 20px">We don&rsquo;t stop the work until you&rsquo;re
-                                        completely satisfied with the outcome! As a CEC Accredited solar provider, we
-                                        are proud to offer a range of quality products. All of the solar panels ...</p>
+                                    <p>22 Nov, 2020</p>
+                                    <h4 style="margin-top: 20px">If You&#039;re a Commercial Business, we&#039;d love to
+                                        Work with You!</h4>
+                                    <p style="margin-top: 20px">At Lumico Solar &amp; Electrical, we specialise in all
+                                        types and sizes of commercial solar systems, which are specifically designed and
+                                        manufactured for Australian conditions. We also conduct feasib ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9184-here-s-how-you-can-cut-your-carbon-footprint"
-                            style="text-decoration: none; color: inherit">
+                        <a href="/article/7277-sm" style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/f4585eeb491c144065305d2c487a1c90/0c0d389cb6e4e3db-58/s540x810/73b3d66f71c862b5a3d359fbd842a9a24b6de60c.png"
+                                    <img src="https://64.media.tumblr.com/66408b45fc1507e6dc3700182ced61b0/3fe1458d12459939-8d/s540x810/7b48dcf4bb1cfc1999f389aee0e20b81db384d91.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>25 Jul, 2021</p>
-                                    <h4 style="margin-top: 20px">Here&#039;s How You Can Cut Your Carbon Footprint</h4>
-                                    <p style="margin-top: 20px">Light up your home and cut your carbon footprint with an
-                                        easy-to-install solar panel system. We specialize in finding you the solar
-                                        panels that will work best for your home or commercial property. ...
-                                    </p>
+                                    <p>15 Nov, 2020</p>
+                                    <h4 style="margin-top: 20px">Sm</h4>
+                                    <p style="margin-top: 20px">With summer in full swing here in Adelaide,
+                                        there&rsquo;s no better time to make the switch to solar. Slash your energy
+                                        costs, and even increase the resale value of your greatest asset with the assu
+                                        ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9144-tailored-solutions-for-our-clients"
-                            style="text-decoration: none; color: inherit">
+                        <a href="/article/6898-about-us" style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/cc4906556b3befffc369461351f8bf79/cd20f0c982f2d734-f3/s540x810/8a65e94d332d0182b372a676808bd5ece349e35d.png"
+                                    <img src="https://64.media.tumblr.com/607b1b69d2171ee99034b60b7e9e1cae/ec69ee523b6bbf92-4b/s540x810/9a8dcef109d2eecee4fcbb14e28a648e9e49fa01.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>18 Jul, 2021</p>
-                                    <h4 style="margin-top: 20px">Tailored Solutions For Our Clients</h4>
-                                    <p style="margin-top: 20px">When you choose to work with us, you can expect a range
-                                        of solar solutions, subject to your individual requirements. Our core electrical
-                                        service includes quality installations, carried out by reliab ...</p>
+                                    <p>5 Oct, 2020</p>
+                                    <h4 style="margin-top: 20px">About Us</h4>
+                                    <p style="margin-top: 20px">Hello, Adelaide 👋! Chances are, you have probably seen
+                                        our team driving around the community before&hellip;but we figured a formal
+                                        introduction is necessary. We are proud to be one of Adelaide&amp;r ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9113-our-wide-range-of-energy-solutions"
+                        <a href="/article/6789-new-commercial-solar-installation"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/433fe314d3f9b60b3cdb53263d1d78a4/21b819f08ce0ffc3-04/s540x810/5fb79d8127509de8addd8f7b48a35b05fceb5887.png"
+                                    <img src="https://64.media.tumblr.com/6c6fb74bcd4b860d242cceb6641aa1db/c343fb671ee3574f-e9/s540x810/1572088da1bb1bd8d70f8dfb8599765ab9038e47.jpg"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>11 Jul, 2021</p>
-                                    <h4 style="margin-top: 20px">Our Wide Range of Energy Solutions</h4>
-                                    <p style="margin-top: 20px">Whether you are considering battery storage, solar
-                                        panels or just exploring your energy options, we have a solution for you. Our
-                                        range of products and services include solar panel installation, repl ...</p>
+                                    <p>17 Sep, 2020</p>
+                                    <h4 style="margin-top: 20px">New Commercial Solar Installation</h4>
+                                    <p style="margin-top: 20px"></p>
                                 </div>
                             </div>
                         </a>
                         <div style="text-align: center">
-                            <a href="/news">Previous.</a>
-                            <a href="/news">1</a> 2
+                            <a href="/newsp=7">Previous.</a>
+                            <a href="/news">1</a>
+                            <a href="/newsp=2">2</a>
                             <a href="/newsp=3">3</a>
                             <a href="/newsp=4">4</a>
                             <a href="/newsp=5">5</a>
                             <a href="/newsp=6">6</a>
-                            <a href="/newsp=7">7</a>
-                            <a href="/newsp=8">8</a>
-                            <a href="/newsp=3">Next</a>
+                            <a href="/newsp=7">7</a> 8 Next
                         </div>
                         <script>
                             var css = document.createElement("link");
@@ -366,9 +359,9 @@
                                         </div>
                                     </div>
                                     <div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
-                                        <p><a href="/cdn-cgi/l/email-protection#0b7864676a794b677e6662686425686466256a7e"
+                                        <p><a href="/cdn-cgi/l/email-protection#0774686b6675476b726a6e64682964686a296672"
                                                 class="footer-text-info" title="Email"><span class="__cf_email__"
-                                                    data-cfemail="10637f7c7162507c657d79737f3e737f7d3e7165">[email&#160;protected]</span></a>
+                                                    data-cfemail="f0839f9c9182b09c859d99939fde939f9dde9185">[email&#160;protected]</span></a>
                                         </p>
                                     </div>
                                 </div>
