--- a/newsp=3.html
+++ b/newsp=3.html
@@ -169,115 +169,112 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8 col-md-8 col-lg-8 blog">
-                        <a href="/article/9361-when-you-invest-in-lumico-solar-electrical-you-invest-in-quality"
+                        <a href="/article/9077-we-are-experts-in-residential-solar-installation"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/aed99d990f35fc117cfe4253cb8b3bcf/33ec260730da1838-e0/s540x810/ee343127e4afc109d3e750b2f8208f56a204216d.jpg"
+                                    <img src="https://64.media.tumblr.com/92eff870c017cc4284963f99219a440f/6d502b5bce8fdd89-8c/s540x810/07ad9585e29ee32cc3da840e4f222ffe5f1a4738.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>22 Aug, 2021</p>
-                                    <h4 style="margin-top: 20px">When You Invest In Lumico Solar &amp; Electrical You
-                                        Invest In Quality</h4>
-                                    <p style="margin-top: 20px">It&rsquo;s often true what they, you get what you for.
-                                        And when we&rsquo;re talking solar, this means quality panels, premium inverters
-                                        and first-class backup batteries. Our expert installers are inv ...</p>
+                                    <p>4 Jul, 2021</p>
+                                    <h4 style="margin-top: 20px">We Are Experts in Residential Solar Installation</h4>
+                                    <p style="margin-top: 20px">Lumico Solar are experts in the design and installation
+                                        of residential solar systems. We are not a one-man band – we work with our
+                                        clients to create a long-term relationship with a team of experts ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9332-what-it-means-to-invest-in-the-long-term-value-of-your-solar-system"
+                        <a href="/article/9025-experience-premium-products-and-reliable-service"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/db31e8e3a231f728825c569d01954f07/2c3614ff3e2acb24-ea/s540x810/ce8a4f16c394feb06ccb167cfc2277306c48e5d9.jpg"
+                                    <img src="https://64.media.tumblr.com/7c1da0ff116169304e24ec8212601147/22d27ac74ce20626-c6/s540x810/d6e963b943f7580147d3e3881f3ac2df1fcfc84d.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>16 Aug, 2021</p>
-                                    <h4 style="margin-top: 20px">What It Means To Invest In The Long Term Value Of Your
-                                        Solar System</h4>
-                                    <p style="margin-top: 20px">Are you interested in the long term value of your solar
-                                        system? You Should be! We look at the long-term gains you can achieve with the
-                                        right system for your home or business and offer you a premium q ...</p>
+                                    <p>27 Jun, 2021</p>
+                                    <h4 style="margin-top: 20px">Experience Premium Products and Reliable Service</h4>
+                                    <p style="margin-top: 20px">Purchase a solar system with confidence, knowing that
+                                        you are buying a premium product from a Clean Energy Council accredited and
+                                        recommended installer. We can supply you with a wide range of solar ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9226-our-commitment-to-service-and-satisfaction"
+                        <a href="/article/8966-experience-credit-towards-your-energy-bills"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/c8285de3a8781103fd1e0334a30017b7/8ec027b2a5239d67-82/s540x810/4ac0f07ee04dad7401dfc52b960543c87defade8.png"
+                                    <img src="https://64.media.tumblr.com/256e6a2629291732130d1b1fa85ab55b/bdc46920bc0276c5-4f/s540x810/f28a53bd6309a3755350dbedf2911ee95b99f6ff.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>1 Aug, 2021</p>
-                                    <h4 style="margin-top: 20px">Our Commitment to Service and Satisfaction</h4>
-                                    <p style="margin-top: 20px">We don&rsquo;t stop the work until you&rsquo;re
-                                        completely satisfied with the outcome! As a CEC Accredited solar provider, we
-                                        are proud to offer a range of quality products. All of the solar panels ...</p>
+                                    <p>20 Jun, 2021</p>
+                                    <h4 style="margin-top: 20px">Experience CREDIT Towards your Energy Bills</h4>
+                                    <p style="margin-top: 20px">With Lumico Solar, you will be able to watch your power
+                                        meter spin backwards and see CREDIT on your next electricity bill. Our unique
+                                        products and solutions incorporate some of the most sophisticate ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9184-here-s-how-you-can-cut-your-carbon-footprint"
-                            style="text-decoration: none; color: inherit">
+                        <a href="/article/8912-what-our-team-can-offer" style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/f4585eeb491c144065305d2c487a1c90/0c0d389cb6e4e3db-58/s540x810/73b3d66f71c862b5a3d359fbd842a9a24b6de60c.png"
+                                    <img src="https://64.media.tumblr.com/334543ac799da113b5b256f0a74b48be/d7367d3bf021cdd2-b4/s540x810/08332edf63807cbe4258dd0633828e7aeca66404.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>25 Jul, 2021</p>
-                                    <h4 style="margin-top: 20px">Here&#039;s How You Can Cut Your Carbon Footprint</h4>
-                                    <p style="margin-top: 20px">Light up your home and cut your carbon footprint with an
-                                        easy-to-install solar panel system. We specialize in finding you the solar
-                                        panels that will work best for your home or commercial property. ...
-                                    </p>
+                                    <p>13 Jun, 2021</p>
+                                    <h4 style="margin-top: 20px">What Our Team Can Offer</h4>
+                                    <p style="margin-top: 20px">Lumico Solar’s team of qualified electricians and solar
+                                        experts are passionate about helping homes around Adelaide and the surrounding
+                                        communities go green. We are dedicated to providing a persona ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9144-tailored-solutions-for-our-clients"
+                        <a href="/article/8850-sustainable-solar-solutions"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/cc4906556b3befffc369461351f8bf79/cd20f0c982f2d734-f3/s540x810/8a65e94d332d0182b372a676808bd5ece349e35d.png"
+                                    <img src="https://64.media.tumblr.com/4ab080149ed94db08b4a8f225fa90d23/e8b8b43d5fc60bd6-46/s540x810/bb016adad125370b878fd97e42426a2564d9d6d0.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>18 Jul, 2021</p>
-                                    <h4 style="margin-top: 20px">Tailored Solutions For Our Clients</h4>
-                                    <p style="margin-top: 20px">When you choose to work with us, you can expect a range
-                                        of solar solutions, subject to your individual requirements. Our core electrical
-                                        service includes quality installations, carried out by reliab ...</p>
+                                    <p>6 Jun, 2021</p>
+                                    <h4 style="margin-top: 20px">Sustainable Solar Solutions</h4>
+                                    <p style="margin-top: 20px">Sustainable energy that’s smart, simple and beautiful.
+                                        This is what we offer with our services. Our team is proud to bring choice,
+                                        control and independence to solar and battery storage. Our pers ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9113-our-wide-range-of-energy-solutions"
+                        <a href="/article/8800-here-s-how-you-can-reduce-your-power-bills-by-nearly-80"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/433fe314d3f9b60b3cdb53263d1d78a4/21b819f08ce0ffc3-04/s540x810/5fb79d8127509de8addd8f7b48a35b05fceb5887.png"
+                                    <img src="https://64.media.tumblr.com/c5afb98896cbcdf420514209752a17c2/ef519bae7abe3ccc-76/s540x810/67b849cd603ea4f71061b8369eca18b38ed27bd4.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>11 Jul, 2021</p>
-                                    <h4 style="margin-top: 20px">Our Wide Range of Energy Solutions</h4>
-                                    <p style="margin-top: 20px">Whether you are considering battery storage, solar
-                                        panels or just exploring your energy options, we have a solution for you. Our
-                                        range of products and services include solar panel installation, repl ...</p>
+                                    <p>30 May, 2021</p>
+                                    <h4 style="margin-top: 20px">Here&#039;s How you Can Reduce your Power Bills by
+                                        Nearly 80%</h4>
+                                    <p style="margin-top: 20px">With the rise of electricity costs, many households are
+                                        paying more and more for their monthly bills. Homeowners are worried about how
+                                        they will afford their expenses moving forward. This anxiety ...</p>
                                 </div>
                             </div>
                         </a>
                         <div style="text-align: center">
-                            <a href="/news">Previous.</a>
-                            <a href="/news">1</a> 2
-                            <a href="/newsp=3">3</a>
+                            <a href="/newsp=2">Previous.</a>
+                            <a href="/news">1</a>
+                            <a href="/newsp=2">2</a> 3
                             <a href="/newsp=4">4</a>
                             <a href="/newsp=5">5</a>
                             <a href="/newsp=6">6</a>
                             <a href="/newsp=7">7</a>
                             <a href="/newsp=8">8</a>
-                            <a href="/newsp=3">Next</a>
+                            <a href="/newsp=4">Next</a>
                         </div>
                         <script>
                             var css = document.createElement("link");
@@ -366,9 +363,9 @@
                                         </div>
                                     </div>
                                     <div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
-                                        <p><a href="/cdn-cgi/l/email-protection#0b7864676a794b677e6662686425686466256a7e"
+                                        <p><a href="/cdn-cgi/l/email-protection#3b4854575a497b574e5652585415585456155a4e"
                                                 class="footer-text-info" title="Email"><span class="__cf_email__"
-                                                    data-cfemail="10637f7c7162507c657d79737f3e737f7d3e7165">[email&#160;protected]</span></a>
+                                                    data-cfemail="7a0915161b083a160f1713191554191517541b0f">[email&#160;protected]</span></a>
                                         </p>
                                     </div>
                                 </div>
