--- a/newsp=5.html
+++ b/newsp=5.html
@@ -169,115 +169,114 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8 col-md-8 col-lg-8 blog">
-                        <a href="/article/9361-when-you-invest-in-lumico-solar-electrical-you-invest-in-quality"
+                        <a href="/article/8424-what-maintenance-is-required-for-your-solar-system"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/aed99d990f35fc117cfe4253cb8b3bcf/33ec260730da1838-e0/s540x810/ee343127e4afc109d3e750b2f8208f56a204216d.jpg"
+                                    <img src="https://64.media.tumblr.com/c724c03d652a7da94dd1433ee48292ea/10bdb6b0f1f6fe56-c1/s540x810/a03b527c1d8f20ab270bbf4ef1d723c37bb6808d.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>22 Aug, 2021</p>
-                                    <h4 style="margin-top: 20px">When You Invest In Lumico Solar &amp; Electrical You
-                                        Invest In Quality</h4>
-                                    <p style="margin-top: 20px">It&rsquo;s often true what they, you get what you for.
-                                        And when we&rsquo;re talking solar, this means quality panels, premium inverters
-                                        and first-class backup batteries. Our expert installers are inv ...</p>
+                                    <p>11 Apr, 2021</p>
+                                    <h4 style="margin-top: 20px">What Maintenance is Required for your Solar System</h4>
+                                    <p style="margin-top: 20px">Are you wondering how to keep your solar system in
+                                        tip-top shape? Machines do indeed fall apart or get faulty along the way, which
+                                        reduce their performance. While this is rare in the case of high-qu ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9332-what-it-means-to-invest-in-the-long-term-value-of-your-solar-system"
+                        <a href="/article/8374-save-thousands-on-your-energy-bill-by-making-the-switch"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/db31e8e3a231f728825c569d01954f07/2c3614ff3e2acb24-ea/s540x810/ce8a4f16c394feb06ccb167cfc2277306c48e5d9.jpg"
+                                    <img src="https://64.media.tumblr.com/bd60bebd586e826847ace048daafbd6c/7bf86cef8e82f29c-16/s540x810/548f4a98e7b7e2c897d061cc82e0ffa1360e02cf.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>16 Aug, 2021</p>
-                                    <h4 style="margin-top: 20px">What It Means To Invest In The Long Term Value Of Your
-                                        Solar System</h4>
-                                    <p style="margin-top: 20px">Are you interested in the long term value of your solar
-                                        system? You Should be! We look at the long-term gains you can achieve with the
-                                        right system for your home or business and offer you a premium q ...</p>
+                                    <p>4 Apr, 2021</p>
+                                    <h4 style="margin-top: 20px">Save Thousands on your Energy Bill by Making the Switch
+                                    </h4>
+                                    <p style="margin-top: 20px">Do you want to save thousands of dollars each year from
+                                        your energy bills? It may sound straight-forward, but in truth, achieving this
+                                        is not as simple as it sounds. That&rsquo;s if you haven&amp;rsquo ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9226-our-commitment-to-service-and-satisfaction"
+                        <a href="/article/8326-what-to-consider-when-looking-at-warranties"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/c8285de3a8781103fd1e0334a30017b7/8ec027b2a5239d67-82/s540x810/4ac0f07ee04dad7401dfc52b960543c87defade8.png"
+                                    <img src="https://64.media.tumblr.com/e34ffe33285ffaf808d76353f57302dd/78da232ab3a743b3-aa/s540x810/cabfbbf3534db1138f7a60a99f4ecaece6ca50e8.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>1 Aug, 2021</p>
-                                    <h4 style="margin-top: 20px">Our Commitment to Service and Satisfaction</h4>
-                                    <p style="margin-top: 20px">We don&rsquo;t stop the work until you&rsquo;re
-                                        completely satisfied with the outcome! As a CEC Accredited solar provider, we
-                                        are proud to offer a range of quality products. All of the solar panels ...</p>
+                                    <p>28 Mar, 2021</p>
+                                    <h4 style="margin-top: 20px">What to Consider when Looking at Warranties</h4>
+                                    <p style="margin-top: 20px">What type of warranty should you receive when purchasing
+                                        a solar system? Because solar can be a massive investment, having a reliable
+                                        warranty is essential. Most solar panels are covered under war ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9184-here-s-how-you-can-cut-your-carbon-footprint"
+                        <a href="/article/8275-we-do-residential-installations-too"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/f4585eeb491c144065305d2c487a1c90/0c0d389cb6e4e3db-58/s540x810/73b3d66f71c862b5a3d359fbd842a9a24b6de60c.png"
+                                    <img src="https://64.media.tumblr.com/6d661df22b91fb5e0a45255a1999b40a/22e7dacfa20fa369-d1/s540x810/82181d021127487731d60aa9d9b1debde9effee4.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>25 Jul, 2021</p>
-                                    <h4 style="margin-top: 20px">Here&#039;s How You Can Cut Your Carbon Footprint</h4>
-                                    <p style="margin-top: 20px">Light up your home and cut your carbon footprint with an
-                                        easy-to-install solar panel system. We specialize in finding you the solar
-                                        panels that will work best for your home or commercial property. ...
-                                    </p>
+                                    <p>21 Mar, 2021</p>
+                                    <h4 style="margin-top: 20px">We do Residential Installations Too!</h4>
+                                    <p style="margin-top: 20px">If you are looking to install solar for your home, then
+                                        you&rsquo;re looking at the right team! With significant changes in our
+                                        electricity use over the last few decades, it makes sense to invest in ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9144-tailored-solutions-for-our-clients"
+                        <a href="/article/8221-your-non-panel-components-matter"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/cc4906556b3befffc369461351f8bf79/cd20f0c982f2d734-f3/s540x810/8a65e94d332d0182b372a676808bd5ece349e35d.png"
+                                    <img src="https://64.media.tumblr.com/bcfad2bc4e4e28cd658a127a306b3bfc/e00f0f19441b7f94-56/s540x810/500eae63a1f09cc28385aea4172b5f9e55a43f4c.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>18 Jul, 2021</p>
-                                    <h4 style="margin-top: 20px">Tailored Solutions For Our Clients</h4>
-                                    <p style="margin-top: 20px">When you choose to work with us, you can expect a range
-                                        of solar solutions, subject to your individual requirements. Our core electrical
-                                        service includes quality installations, carried out by reliab ...</p>
+                                    <p>14 Mar, 2021</p>
+                                    <h4 style="margin-top: 20px">Your Non-Panel Components Matter!</h4>
+                                    <p style="margin-top: 20px">Panels are just one part of your system&hellip; You will
+                                        need to install a high-quality inverter to assist the panels in converting DC
+                                        currents to AC currents. Having an inverter is compulsory for ...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="/article/9113-our-wide-range-of-energy-solutions"
+                        <a href="/article/8164-make-the-right-long-term-investment-in-your-home-or-business"
                             style="text-decoration: none; color: inherit">
                             <div class="embed-col-md-12" style="min-height: 200px; margin-top: 30px">
                                 <div class="embed-col-md-4" style="padding: 10px">
-                                    <img src="https://64.media.tumblr.com/433fe314d3f9b60b3cdb53263d1d78a4/21b819f08ce0ffc3-04/s540x810/5fb79d8127509de8addd8f7b48a35b05fceb5887.png"
+                                    <img src="https://64.media.tumblr.com/82e61a8500d21e93e39f59828277dbb9/56a9dade3626c167-46/s540x810/ed4d6e0341400d439a58018023a14ed27f871c34.png"
                                         class="embed-img-rounded" style="width: 100%" />
                                 </div>
                                 <div class="embed-col-md-8" style="padding: 10px">
-                                    <p>11 Jul, 2021</p>
-                                    <h4 style="margin-top: 20px">Our Wide Range of Energy Solutions</h4>
-                                    <p style="margin-top: 20px">Whether you are considering battery storage, solar
-                                        panels or just exploring your energy options, we have a solution for you. Our
-                                        range of products and services include solar panel installation, repl ...</p>
+                                    <p>7 Mar, 2021</p>
+                                    <h4 style="margin-top: 20px">Make the Right Long-Term Investment in your Home or
+                                        Business</h4>
+                                    <p style="margin-top: 20px">Invest in something that not only offers a multitude of
+                                        immediate benefits but will provide a long-term return-on-investment. This is
+                                        what solar aims to achieve. By investing in premium quality so ...</p>
                                 </div>
                             </div>
                         </a>
                         <div style="text-align: center">
-                            <a href="/news">Previous.</a>
-                            <a href="/news">1</a> 2
+                            <a href="/newsp=4">Previous.</a>
+                            <a href="/news">1</a>
+                            <a href="/newsp=2">2</a>
                             <a href="/newsp=3">3</a>
-                            <a href="/newsp=4">4</a>
-                            <a href="/newsp=5">5</a>
+                            <a href="/newsp=4">4</a> 5
                             <a href="/newsp=6">6</a>
                             <a href="/newsp=7">7</a>
                             <a href="/newsp=8">8</a>
-                            <a href="/newsp=3">Next</a>
+                            <a href="/newsp=6">Next</a>
                         </div>
                         <script>
                             var css = document.createElement("link");
@@ -366,9 +365,9 @@
                                         </div>
                                     </div>
                                     <div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
-                                        <p><a href="/cdn-cgi/l/email-protection#0b7864676a794b677e6662686425686466256a7e"
+                                        <p><a href="/cdn-cgi/l/email-protection#1b6874777a695b776e7672787435787476357a6e"
                                                 class="footer-text-info" title="Email"><span class="__cf_email__"
-                                                    data-cfemail="10637f7c7162507c657d79737f3e737f7d3e7165">[email&#160;protected]</span></a>
+                                                    data-cfemail="01726e6d6073416d746c68626e2f626e6c2f6074">[email&#160;protected]</span></a>
                                         </p>
                                     </div>
                                 </div>
